--- a/views/chart.jade
+++ b/views/chart.jade
@@ -8,4 +8,4 @@ block content
 
   script(src="http://d3js.org/d3.v3.min.js")
   script(src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js")
-  script(src="scripts/barchart.js")
+  script(src="/javascripts/barchart.js")
